--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         }
         .form-group {
             margin-bottom: 20px;
+            margin-right: 20px;
         }
         label {
             font-weight: bold;
