--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </script>
 
         <h1>Project Information</h1>
-        <form action="submit_action.php" method="POST"> <!-- Replace "submit_action.php" with your form submission URL -->
+        <form id="project-form">
             <div class="form-group">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
