--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         const formData = new FormData(this);
 
         // Specify your backend URL (localhost:8000) here
-        const backendUrl = 'http://localhost:8000'; // Replace with your actual backend URL
+        const backendUrl = 'http://172.20.10.6:8000'; // Replace with your actual backend URL
 
         // Send a POST request to the backend
         fetch(backendUrl, {
