--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         // Send a POST request to the backend
         fetch(backendUrl, {
             method: 'POST',
-            body: formData,
+            body: "formData",
         })
         .then(response => {
             if (response.ok) {
