--- a/index.html
+++ b/index.html
@@ -47,37 +47,39 @@
 </head>
 <body>
     <div class="container">
-        <script>
-    // JavaScript to handle form submission and send POST request
-    document.getElementById('project-form').addEventListener('submit', function (e) {
-        e.preventDefault(); // Prevent the default form submission behavior
+        <script>    
+            // JavaScript to handle form submission and send POST request
+document.getElementById('project-form').addEventListener('submit', function (e) {
+    e.preventDefault(); // Prevent the default form submission behavior
 
-        // Get form data
-        const formData = new FormData(this);
+    // Get form data
+    const formData = new FormData(this);
 
-        // Specify your backend URL (localhost:8000) here
-        const backendUrl = 'http://172.20.10.6:8000'; // Replace with your actual backend URL
+    // Specify your backend URL (localhost:8000/generate-project) here
+    const backendUrl = 'http://localhost:8000/generate-project'; // Update with your actual backend URL
 
-        // Send a POST request to the backend
-        fetch(backendUrl, {
-            method: 'POST',
-            body: "formData",
-        })
-        .then(response => {
-            if (response.ok) {
-                // Handle a successful response, e.g., display a success message
-                console.log('Form submitted successfully');
-            } else {
-                // Handle errors, e.g., display an error message
-                console.error('Form submission failed');
-            }
-        })
-        .catch(error => {
-            // Handle network or other errors
-            console.error('Error:', error);
-        });
+    // Send a POST request to the backend
+    fetch(backendUrl, {
+        method: 'POST',
+        body: formData, // Send the form data as the body
+    })
+    .then(response => {
+        if (response.ok) {
+            // Handle a successful response, e.g., display a success message
+            console.log('Form submitted successfully');
+            // You can add code here to handle the response, e.g., display a download link for the generated document.
+        } else {
+            // Handle errors, e.g., display an error message
+            console.error('Form submission failed');
+        }
+    })
+    .catch(error => {
+        // Handle network or other errors
+        console.error('Error:', error);
     });
-</script>
+});
+
+        </script>
 
         <h1>Project Information</h1>
         <form id="project-form">
