--- a/index.html
+++ b/index.html
@@ -60,24 +60,42 @@ document.getElementById('project-form').addEventListener('submit', function (e) 
     const backendUrl = 'http://localhost:8000/generate-project'; // Update with your actual backend URL
 
     // Send a POST request to the backend
-    fetch(backendUrl, {
-        method: 'POST',
-        body: formData, // Send the form data as the body
-    })
-    .then(response => {
-        if (response.ok) {
-            // Handle a successful response, e.g., display a success message
-            console.log('Form submitted successfully');
-            // You can add code here to handle the response, e.g., display a download link for the generated document.
-        } else {
-            // Handle errors, e.g., display an error message
-            console.error('Form submission failed');
-        }
-    })
-    .catch(error => {
-        // Handle network or other errors
-        console.error('Error:', error);
-    });
+   fetch(backendUrl, {
+    method: 'POST',
+    body: formData, // Send the form data as the body
+})
+.then(response => {
+    if (response.ok) {
+        // Handle a successful response, e.g., display a success message
+        console.log('Form submitted successfully');
+
+        // Create a blob from the response data
+        response.blob().then(blob => {
+            // Create a temporary URL for the blob
+            const url = window.URL.createObjectURL(blob);
+
+            // Create a link element to trigger the download
+            const a = document.createElement('a');
+            a.style.display = 'none';
+            a.href = url;
+            a.download = 'generated-project.docx'; // Specify the filename
+
+            // Append the link to the document and trigger the download
+            document.body.appendChild(a);
+            a.click();
+
+            // Clean up after the download
+            window.URL.revokeObjectURL(url);
+        });
+    } else {
+        // Handle errors, e.g., display an error message
+        console.error('Form submission failed');
+    }
+})
+.catch(error => {
+    // Handle fetch errors, e.g., network issues
+    console.error('Fetch error:', error);
+});
 });
             });
         </script>
