--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ document.getElementById('project-form').addEventListener('submit', function (e) 
 .then(response => {
     if (response.ok) {
         // Handle a successful response, e.g., display a success message
-        console.log('Form submitted successfully');
+        console.log('Form submitted successfully1');
 
         // Create a blob from the response data
         response.blob().then(blob => {
