--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Information</title>
+    <title>אב טיפוס פלוגה ב</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -103,19 +103,19 @@ document.getElementById('project-form').addEventListener('submit', function (e) 
         <h1>Project Information</h1>
         <form id="project-form">
             <div class="form-group">
-                <label for="title">Title:</label>
+                <label for="title" dir="rtl">כותרת העבודה:</label>
                 <input type="text" id="title" name="title" required>
             </div>
             <div class="form-group">
-                <label for="content">Content:</label>
+                <label for="content" dir="rtl">תוכן העבודה:</label>
                 <input type="text" id="content" name="content" required>
             </div>
             <div class="form-group">
-                <label for="full_name">Full Name:</label>
+                <label for="full_name" dir="rtl">שם מלא:</label>
                 <input type="text" id="full_name" name="full_name" required>
             </div>
             <div class="form-group">
-                <label for="team_number">Team Number:</label>
+                <label for="team_number" dir="rtl">מספר צוות:</label>
                 <input type="text" id="team_number" name="team_number" required>
             </div>
             <button type="submit">Submit</button>
