--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ document.getElementById('project-form').addEventListener('submit', function (e) 
             });
         </script>
 
-        <h1>Project Information</h1>
+        <h1>אב טיפוס פלוגה ב</h1>
         <form id="project-form">
             <div class="form-group">
                 <label for="title" dir="rtl">כותרת העבודה:</label>
