--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ document.getElementById('project-form').addEventListener('submit', function (e) 
         </script>
 
         <h1>אב טיפוס פלוגה ב</h1>
-        <form id="project-form">
+        <form id="project-form" dir="rtl">
             <div class="form-group">
                 <label for="title" dir="rtl">כותרת העבודה:</label>
                 <input type="text" id="title" name="title" required>
