--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         .form-group {
             margin-bottom: 20px;
-            margin-right: 20px;
+            margin-left: 20px;
         }
         label {
             font-weight: bold;
@@ -100,7 +100,7 @@ document.getElementById('project-form').addEventListener('submit', function (e) 
             });
         </script>
 
-        <h1>אב טיפוס פלוגה ב</h1>
+        <h1>אב טיפוס פרויקט פלוגה ב</h1>
         <form id="project-form" dir="rtl">
             <div class="form-group">
                 <label for="title" dir="rtl">כותרת העבודה:</label>
