--- a/index.html
+++ b/index.html
@@ -1,125 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>אב טיפוס פלוגה ב</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        }
-        .form-group {
-            margin-bottom: 20px;
-            margin-left: 20px;
-        }
-        label {
-            font-weight: bold;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        button {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <script>    
-            // JavaScript to handle form submission and send POST request
-                document.addEventListener('DOMContentLoaded', function() {
-document.getElementById('project-form').addEventListener('submit', function (e) {
-    e.preventDefault(); // Prevent the default form submission behavior
-
-    // Get form data
-    const formData = new FormData(this);
-
-    // Specify your backend URL (localhost:8000/generate-project) here
-    const backendUrl = 'http://localhost:8000/generate-project'; // Update with your actual backend URL
-
-    // Send a POST request to the backend
-   fetch(backendUrl, {
-    method: 'POST',
-    body: formData, // Send the form data as the body
-})
-.then(response => {
-    if (response.ok) {
-        // Handle a successful response, e.g., display a success message
-        console.log('Form submitted successfully1');
-
-        // Create a blob from the response data
-        response.blob().then(blob => {
-            // Create a temporary URL for the blob
-            const url = window.URL.createObjectURL(blob);
-
-            // Create a link element to trigger the download
-            const a = document.createElement('a');
-            a.style.display = 'none';
-            a.href = url;
-            a.download = 'generated-project.docx'; // Specify the filename
-
-            // Append the link to the document and trigger the download
-            document.body.appendChild(a);
-            a.click();
-
-            // Clean up after the download
-            window.URL.revokeObjectURL(url);
-        });
-    } else {
-        // Handle errors, e.g., display an error message
-        console.error('Form submission failed');
-    }
-})
-.catch(error => {
-    // Handle fetch errors, e.g., network issues
-    console.error('Fetch error:', error);
-});
-});
-            });
-        </script>
-
-        <h1>אב טיפוס פרויקט פלוגה ב</h1>
-        <form id="project-form" dir="rtl">
-            <div class="form-group">
-                <label for="title" dir="rtl">כותרת העבודה:</label>
-                <input type="text" id="title" name="title" required>
-            </div>
-            <div class="form-group">
-                <label for="content" dir="rtl">תוכן העבודה:</label>
-                <input type="text" id="content" name="content" required>
-            </div>
-            <div class="form-group">
-                <label for="full_name" dir="rtl">שם מלא:</label>
-                <input type="text" id="full_name" name="full_name" required>
-            </div>
-            <div class="form-group">
-                <label for="team_number" dir="rtl">מספר צוות:</label>
-                <input type="text" id="team_number" name="team_number" required>
-            </div>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/DevBhad1ProjectTemplate/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/DevBhad1ProjectTemplate/logo192.png"/><link rel="manifest" href="/DevBhad1ProjectTemplate/manifest.json"/><title>דוגמא למופת</title><script defer="defer" src="/DevBhad1ProjectTemplate/static/js/main.bd46d0a1.js"></script><link href="/DevBhad1ProjectTemplate/static/css/main.10192971.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
